--- a/README
+++ b/README
@@ -1,7 +1,5 @@
-Add calendar event with an Activator action. An uninteresting tweak
-with somewhat interesting technicality since Activator actions must
-live in SpringBoard but also it needs to talk to the calendar app and
-hook that.
+Strava integration for Activator. Start, stop or toggle Strava recording via your chosen action.
 
-for a compiled form of this Activator action add http://orikad.com/repo to Cydia.
-To compile this use Theos http://iphonedevwiki.net/index.php/Theos/Getting_Started
+A useful tweak and technicality interesting since Activator actions must live in SpringBoard but also it needs to talk to the Strava app and hook that.
+
+To compile this project please use Dustin Howett's Theos: http://iphonedevwiki.net/index.php/Theos/Getting_Started.
